# mmbot

./: .editorconfig  .env.development  .env.example  .env.production  .env.staging  .gitignore  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml  security.yml  testing.yml
api/: README.md  openapi.yaml
architecture/: README.md
database/: README.md  schema.sql
database/migrations/: 0002_runtime_events_and_rbac.sql  0003_exchange_connection_health.sql
database/seeds/: 0001_rbac_seed.sql
deployment/: README.md
docker/dashboard/: Dockerfile
docker/engine/: Dockerfile
docker/nginx/: nginx.conf
docs/: README.md  bootstrap-report.md  coding-standards.md  development-standards.md  naming-conventions.md  repository-structure.md  roadmap.md
docs/certification/: deployment-and-certification-playbook.md  live-order-lifecycle-checklists.md  live-order-lifecycle-checklists.yaml
docs/cicd/: github-secrets-configuration.md
docs/deployment/: vps-setup-guide.md
docs/ops/: BASELINE_VERIFICATION.md  CANARY_READINESS_CHECKLIST.md  LIVE_READINESS_CHECKLIST.md  ROLLBACK_PROCEDURE.md  SECRET_ROTATION_CHECKLIST.md  STABLE_STATE_2026_06_11.md
monitoring/: prometheus.yml
operations/: README.md
scripts/: deploy_vps.sh  healthcheck_vps.sh  rollback_vps.sh  validate_env.py
security/: README.md
services/backend/: README.md
services/dashboard/: app.css  app.js  index.html
services/market-data-engine/: README.md
services/market-maker-engine/: README.md
(+89 files in other folders)
